compiler/testData/diagnostics/tests/annotations/kt47484_2.fir.kt
interface I {
    fun <T
            > f<!SYNTAX!><!> = "".
    (C().<!FUNCTION_CALL_EXPECTED!>f<!><!SYNTAX!><!>
    class C : I<!SYNTAX!><!>
